[package]
name = "gav"
version = "0.2.0"
authors = ["Dmitry Matrokhin <matrokhin.d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.20.7"
minifb = "0.19.1"
raqote = "0.7.14"
rand = "0.7.3"
clap = "2.33.0"
